--- a/MasterPage/NavBar.master
+++ b/MasterPage/NavBar.master
@@ -11,7 +11,7 @@
 <body>
     <form id="form1" runat="server">
     <div>
-
+        <h1>you're gay</h1>
         <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
         
         </asp:ContentPlaceHolder>
