--- a/MasterPage/NavBar.master
+++ b/MasterPage/NavBar.master
@@ -21,7 +21,7 @@
                 <li><a href="#">Time Table</a></li>
                 <li><a href="#">Grades</a></li>
                 <li><a href="#">PhoneBook</a></li>
-                <li></li>
+                <li><a href="#">Messages</a></li>
               </ul>
             </div>
 
