--- a/CSS/DropdownUserRight.css
+++ b/CSS/DropdownUserRight.css
@@ -2,45 +2,71 @@
     position: absolute;
     right: 2%;
     color: blue;
+    width:15%;
+    top:3%;
+
 }
 
+#WelcomeRight{
+    width: 100%;
+    position: center;
+    padding: 5%, 5%;
+
+}
 #topRightDropdownMenu a, .dropbtn {
 display: inline-block;
-color: white;
+color: cornflowerblue;
 text-align: center;
-padding: 14px 16px;
+padding: 5%, 5%;
+padding-top: 10%;
+padding-bottom:10%;
 text-decoration: none;
+
+}
+
+#topRightDropdownMenu a{
+    border-bottom:0.1px, solid #b5c9ec;
 }
 
 #topRightDropdownMenu a:hover, #topRightDropdownMenu:hover .dropbtn {
-background-color: red;
+    background-color: #8baae1;
+    color:white;
+    transition: 0.5s;
 }
 
 #topRightDropdownMenu {
 display: inline-block;
 }
 
-.dropdown-content {
+#topRightDropdownMenu .dropdown-content {
 display: none;
 position: absolute;
 background-color: #f9f9f9;
-min-width: 160px;
+text-align:center;
 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 z-index: 1;
+width:100%;
+
+}
+
+#topRightDropdownMenu .dropdown-content{
+    width:100%;
+}
+#topRightDropdownMenu #signoutlink{
+    width:100%;
 }
 
 .dropdown-content a {
 color: black;
-padding: 12px 16px;
+padding:5%, 5%;
 text-decoration: none;
+width:inherit;
 display: block;
 text-align: left;
 }
 
-.dropdown-content a:hover {
-background-color: #f1f1f1
-}
 
 #topRightDropdownMenu:hover .dropdown-content {
 display: block;
+transition: 0.5s;
 }
