--- a/MasterPage/NavBar.master
+++ b/MasterPage/NavBar.master
@@ -27,10 +27,10 @@
                 </div>
             </div>
             <div id="topRightDropdownMenu">
-                <a href="#" class="dropbtn">Welcome, </a>
+                <a runat="server" id="WelcomeRight" href="#" class="dropbtn">Welcome, </a>
                 <div class="dropdown-content">
                 <a href="#">Account Settings</a>
-                <a href="#">Sign Out</a>
+                <a href="../Login.aspx" id="signoutlink">Sign Out</a>
                 </div>
                 
 
