--- a/CSS/DropdownUserRight.css
+++ b/CSS/DropdownUserRight.css
@@ -8,11 +8,13 @@
 }
 
 
-#WelcomeRight{
+#WelcomeRight {
     width: 100%;
     position: center;
     padding: 5%, 5%;
-
+    cursor: pointer;
+    user-select: none;
+    -moz-user-select: none;
 }
 #topRightDropdownMenu a, .dropbtn {
 display: inline-block;
