--- a/MasterPage/NavBar.master
+++ b/MasterPage/NavBar.master
@@ -21,13 +21,13 @@
                         <li class="liElements"><a href="#" class="ulLinks">Class Events</a></li>
                         <li class="liElements"><a href="#" class="ulLinks">Time Table</a></li>
                         <li class="liElements"><a href="#" class="ulLinks">Grades</a></li>
-                        <li class="liElements"><a href="#" class="ulLinks">PhoneBook</a></li>
+                        <li class="liElements"><a href="#" class="ulLinks">Phone Book</a></li>
                         <li class="liElements"><a href="#" class="ulLinks">Messages</a></li>
                     </ul>
                 </div>
             </div>
             <div id="topRightDropdownMenu">
-                <a runat="server" id="WelcomeRight" href="#" class="dropbtn">Welcome, </a>
+                <a runat="server" id="WelcomeRight" class="dropbtn">Welcome, </a>
                 <div class="dropdown-content">
                 <a href="#">Account Settings</a>
                 <a href="~/Login.aspx" runat="server" onClick="SignOut" id="signoutlink">Sign Out</a>
